# WhaleOps

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  EASYPANEL_SETUP.md  FORK_NOTES.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml
.github/workflows/: test-backend.yml
agents/: NeuroAgentic_Systems_Whitepaper.tex  neuro_arquitectura_agentica.md
benchmark/: RACE.md
cognitive-agents/.github/: pull_request_template.md
cognitive-agents/scripts/: configure-branch-protection.sh  quality-gate.sh
docs/: CHANGELOG.md  WHATS_NEW_v2.md  comparativa-agentes.docx  comparativa-agentes.md
scripts/: bootstrap_milvus.py  bootstrap_milvus_ops.py  eval_report.sh  run_judge_eval.py  run_judge_from_traces.py  run_task_harness.py
src/cognitive_code_agent/: __init__.py  jobs_api.py  mcp_server.py  ops_api.py  register.py  workspace_api.py
tests/: conftest.py
tests/e2e/: test_code_review_flow_e2e.py  test_docs_flow_e2e.py  test_qa_flow_e2e.py  test_security_flow_e2e.py  test_shell_execute_e2e.py
tests/integration/: test_context_compaction_integration.py  test_cron_scheduler_integration.py  test_deterministic_fallback_policy.py  test_findings_milvus.py  test_mcp_server_integration.py  test_redis_memory_integration.py  test_register.py  test_sandbox_integration.py  test_spawn_agent_integration.py  test_tool_contracts.py  test_tool_error_handling.py  test_working_memory_integration.py
tests/unit/: test_agent_judge_evaluator.py  test_auto_retrieval.py  test_cache.py  test_clone_meta.py  test_clone_tools.py  test_code_review_tools.py  test_common.py  test_config_prompts.py  test_cron_lifespan.py  (+33 more)
ui/: .dockerignore  eslint.config.mjs  next.config.js  package.json  tailwind.config.js  tsconfig.json
ui-cognitive/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  auth.ts  docker-compose.yml  eslint.config.mjs  package.json  playwright.config.ts  vitest.config.ts
(+850 files in other folders)
